# rt-english-stt-editor

./: .gitignore  AGENTS.md  README.md  pyproject.toml
config/: default.yaml
docs/: initial_implementation_plan.md
docs/plans/: 2026-04-05-macos-injector-permissions-live-audio.md
realtime_stt_writer/: __init__.py
realtime_stt_writer/app/: bootstrap.py  main.py
realtime_stt_writer/audio/: __init__.py  capture.py  segmenter.py  vad_base.py
realtime_stt_writer/cleanup/: __init__.py  pipeline.py  rule_based.py
realtime_stt_writer/domain/: __init__.py  models.py  protocols.py
realtime_stt_writer/inject/: __init__.py  anchor.py  formatting.py  hybrid_injector.py  mac_click.py  mac_paste.py  mac_permissions.py
realtime_stt_writer/services/: live_loop.py  orchestrator.py
realtime_stt_writer/stt/: __init__.py  cohere_mlx.py  factory.py
tests/unit/: test_anchor_service.py  test_audio_capture.py  test_cleanup_pipeline.py  test_cli_commands.py  test_endpointing_segmenter.py  test_formatting.py  test_hybrid_injector.py  test_live_transcription_loop.py  test_orchestrator.py  test_permissions.py  test_pyproject_metadata.py
