[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "realtime-stt-writer"
version = "0.1.0"
description = "Local macOS speech-to-text to editor insertion MVP"
requires-python = ">=3.12"

[tool.setuptools.packages.find]
include = ["realtime_stt_writer*"]
